# odontoficha-qt

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.8c6f206  DashboardLayout.qml  DatePicker.qml  FichaClinica.qml  FichaLayout.qml  NavBar.qml  NuevaFichaLayout.qml  PacienteRow.qml  PacientesHeader.qml  PacientesLayout.qml  README.md  configserviciossqlmodel.cpp  configserviciossqlmodel.h  connection.h  customfilterproxymodel.cpp  customfilterproxymodel.h  fichasqlmodel.cpp  fichasqlmodel.h  main.cpp  main.qml  patient.cpp  patient.h  patientsqlmodel.cpp  patientsqlmodel.h  planaccionsqlmodel.cpp  planaccionsqlmodel.h  qtquickcontrols2.conf  resources.qrc  serviciosqlmodel.cpp  serviciosqlmodel.h  utility.cpp  utility.h
db/: odontoficha.db
qml/: AntecedentesLayout.qml  ConfiguracionLayout.qml  DashboardLayout.qml  FichaClinica.qml  FichaLayout.qml  NavBar.qml  NuevaFichaLayout.qml  PacienteRow.qml  PacientesLayout.qml  PdfViewer.qml  PlanAccionLayout.qml  PresupuestoLayout.qml  PresupuestoPrintable.qml  RecetasLayout.qml  main.qml
